# kg

./: .gitignore  .kg.toml  AGENTS.ai  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  eyg.export.json  fridge.html  graph-example-fridge.json  install.sh  mfpriv  mfpriv.pub  plan-mcp-tools.md  repo-example.kg  server.json  todo.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish-mcp.yml  release.yml
.kg/cache/: repo-example.kgindex  repo-example.kglog
benches/: cli_e2e.rs  large_graph.rs  persistence.rs
docs/: adaptive-node-render-plan.md  ai-prompt-graph-from-docs.md  auto-nodes-requirements.md  build-graph-from-docs.md  decision-backend.md  eyg-dictionary-plan.md  eyg-implementation-checklist.md  eyg-rollout-notes.md  g-node-compression.md  getting-started.md  import-csv.md  import-markdown.md  kg-improvements-fix-plan.md  kg-mcp-kg-tool-plan.md  kql.md  mcp.md  memory-sprint-plan.md  node-and-edge-fields-reference.md  sprint-12-schema.md  sprint-plan.md  troubleshooting.md
examples/: generate_large_graph.rs
skills/kg/: SKILL.md
skills/kg-assistant/: SKILL.md
skills/kg-builder/: SKILL.md
skills/kg-gardener/: SKILL.md
src/: access_log.rs  analysis.rs  annotate.rs  auto_update.rs  cache_paths.rs  cli.rs  code_symbols.rs  config.rs  document_sections.rs  event_log.rs  export_html.rs  facts.rs  find_render.rs  graph.rs  graph_clusters.rs  graph_diff.rs  graph_list_render.rs  graph_lock.rs  graph_merge.rs  import_csv.rs  import_markdown.rs  index.rs  init.rs  kg_sidecar.rs  kql.rs  lib.rs  main.rs  ops.rs  output.rs  schema.rs  scoring.rs  storage.rs  text_norm.rs  time_util.rs  validate.rs  vectors.rs
src/app/: graph_annotate.rs  graph_facts.rs  graph_node_edge.rs  graph_note.rs  graph_query_quality.rs  graph_transfer_temporal.rs  mod.rs
tasks/annotate-cleancode-001/: coder.md  orchestrator.md  researcher.md  tester.md
tasks/annotate-text/: coder.md  orchestrator.md  researcher.md  tester.md
tasks/auto-graph-format-support-20260508/: coder.md  orchestrator.md  researcher.md  (+1 more)
tests/: baseline.rs  cli_smoke.rs  feedback.rs  graph_create.rs  graph_mutation.rs  graph_quality.rs  graph_query.rs  mcp_integration.rs
(+9 files in other folders)
