[package]
name = "kg"
version = "0.1.3"
edition = "2024"
description = "A knowledge graph CLI tool for managing structured information"
license = "MIT"
documentation = "https://github.com/anomalyco/kg"
homepage = "https://github.com/anomalyco/kg"
repository = "https://github.com/anomalyco/kg"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
flate2 = "1.0"
nucleo-matcher = "0.3"
ratatui = "0.29"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "io-std"] }
toml = "0.8"
redb = "2.0"
csv = "1.3"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3.15"
