[package]
name = "kg-cli"
version = "0.1.18"
edition = "2024"
description = "A knowledge graph CLI tool for managing structured information"
license = "MIT"
readme = "README.md"
keywords = ["cli", "knowledge-graph", "mcp", "tui"]
categories = ["command-line-utilities"]
documentation = "https://github.com/nnar1o/kg"
homepage = "https://github.com/nnar1o/kg"
repository = "https://github.com/nnar1o/kg"

[lib]
name = "kg"
path = "src/lib.rs"

[[bin]]
name = "kg-cli"
path = "src/bin/kg-cli.rs"

[[bin]]
name = "kg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
flate2 = "1.0"
nucleo-matcher = "0.3"
ratatui = "0.29"
rmcp = { version = "0.16", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "io-std"] }
toml = "0.8"
redb = "2.0"
csv = "1.3"
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3.15"
criterion = "0.5"

[[bench]]
name = "large_graph"
harness = false

[[bench]]
name = "cli_e2e"
harness = false

[[bench]]
name = "persistence"
harness = false
